tdf#119357 add the glyph, if the lookup failed

Regression from commit de8f6b25de6f ("loplugin:unused-returns in
vcl") changing the logic in hunk:

-    return    LookupGlyphID (nGlyph, nOutGlyphID, nOutGlyphSetID)
-           || AddGlyphID    (nGlyph, nOutGlyphID, nOutGlyphSetID);
+    if (LookupGlyphID(nGlyph, nOutGlyphID, nOutGlyphSetID))
+           AddGlyphID(nGlyph, nOutGlyphID, nOutGlyphSetID);

Change-Id: Id643120e1cf5e26b3ffda933d07893048493f089
Reviewed-on: https://gerrit.libreoffice.org/59493
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
(cherry picked from commit 4a58fd0e81b0375c71f6182233f0ec9390942cd1)